--- a/settings.gradle
+++ b/settings.gradle
@@ -38,3 +38,4 @@ include ':core:model:filter'
 include ':core:model:movie'
 include ':core:model:person'
 include ':core:model:tv'
+include ':core:testing'
