--- a/core/testing/build.gradle
+++ b/core/testing/build.gradle
@@ -1,12 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-
 }
 
 android {
-    namespace 'com.indisparte.movie_data'
+    namespace 'com.indisparte.testing'
     compileSdk libs.versions.targetSdk.get().toInteger()
 
     defaultConfig {
@@ -34,24 +32,12 @@ android {
 
 dependencies {
 
-    api project(":core:model:movie")
-    api project(":core:model:filter")
-    api project(":core:model:person")
-    implementation project(":core:response")
-    implementation project(":core:network")
+    implementation(libs.junitTest)
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2")
 
-    implementation libs.bundles.androidX
-    testImplementation libs.junitTest
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2"
-
-    //Retrofit
-    implementation libs.bundles.retrofit
-
-    // Dagger Hilt
-    implementation(libs.dagger.core)
-    kapt(libs.dagger.compiler)
+    // Kotlin Extensions
+    implementation(libs.core.ktx)
 
     // Kotlin Coroutines
     implementation(libs.bundles.coroutines)
-
 }
