--- a/core/testing/build.gradle
+++ b/core/testing/build.gradle
@@ -40,4 +40,8 @@ dependencies {
 
     // Kotlin Coroutines
     implementation(libs.bundles.coroutines)
+
+
+    //Timber
+    implementation(libs.timber)
 }
