fix: add new dependencies to lib version catalog

--- a/feature/movie_details/build.gradle
+++ b/feature/movie_details/build.gradle
@@ -50,10 +50,10 @@ dependencies {
     implementation(libs.constraintLayout)
     implementation(libs.legacy)
     implementation(libs.fragmentKtx)
-    testImplementation(libs.junitTest)
     testImplementation project(':core:testing')
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2")
-    testImplementation "com.google.truth:truth:1.1.4"
+    testImplementation(libs.junitTest)
+    testImplementation(libs.coroutines.test)
+    testImplementation(libs.google.truth)
     androidTestImplementation(libs.junitAndroidTest)
     androidTestImplementation(libs.espresso)
 
