--- a/core/testing/build.gradle
+++ b/core/testing/build.gradle
@@ -33,7 +33,7 @@ android {
 dependencies {
 
     implementation(libs.junitTest)
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2")
+    testImplementation(libs.coroutines.test)
 
     // Kotlin Extensions
     implementation(libs.core.ktx)
