--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -53,8 +53,8 @@ dependencies {
 
     testImplementation(libs.junitTest)
     testImplementation project(':core:testing')
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2")
-    testImplementation "com.google.truth:truth:1.1.4"
+    testImplementation(libs.coroutines.test)
+    testImplementation(libs.google.truth)
     testImplementation project(':data:movie')
     testImplementation project(':data:tv')
     testImplementation project(':data:people')
