--- a/feature/media_discover/build.gradle
+++ b/feature/media_discover/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     implementation(libs.fragmentKtx)
     testImplementation(libs.junitTest)
     testImplementation project(':core:testing')
-    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2")
-    testImplementation "com.google.truth:truth:1.1.4"
+    testImplementation(libs.coroutines.test)
+    testImplementation(libs.google.truth)
     androidTestImplementation(libs.junitAndroidTest)
     androidTestImplementation(libs.espresso)
 
