refactor: update SearchMovie tests

--- a/core/testing/build.gradle
+++ b/core/testing/build.gradle
@@ -33,7 +33,7 @@ android {
 dependencies {
 
     implementation(libs.junitTest)
-    testImplementation(libs.coroutines.test)
+    implementation(libs.coroutines.test)
 
     // Kotlin Extensions
     implementation(libs.core.ktx)
