feat: add database module with dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ jetbrainsPlugin = "1.7.20"
 androidGradlePlugin = "7.3.1"
 minSdk = "22"
 targetSdk = "34"
-room = "2.5.1"
+room = "2.5.2"
 timber = "1.5.1"
 truth = "1.1.4"
 
@@ -47,8 +47,9 @@ glide-core = { module = "com.github.bumptech.glide:glide", version.ref = "glide"
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 dagger-core = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
-room-runtime = { module = "androidx.room:room-ktx", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-runtime = {module = "androidx.room:room-runtime", version.ref = "room"}
 timber = { module = "com.github.ajalt:timberkt", version.ref = "timber" }
 
 [bundles]
