--- a/settings.gradle
+++ b/settings.gradle
@@ -39,3 +39,4 @@ include ':core:model:movie'
 include ':core:model:person'
 include ':core:model:tv'
 include ':core:testing'
+include ':core:database'
