--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -35,28 +35,18 @@ dependencies {
 
     implementation project(":core:model:common")
 
-    implementation libs.bundles.androidX
+    implementation(libs.bundles.androidX)
     implementation(libs.bundles.coroutines)
-    androidTestImplementation(libs.junitAndroidTest)
+    androidTestImplementation(libs.bundles.androidTest)
 
     //Room
-    /*implementation(libs.room.runtime)
-    implementation(libs.room.ktx)
-    kapt(libs.room.compiler)*/
-
-    var room_version = "2.5.2"
-    implementation("androidx.room:room-runtime:$room_version")
-    kapt("androidx.room:room-compiler:$room_version")
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:$room_version")
-    // optional - Test helpers
-    testImplementation("androidx.room:room-testing:$room_version")
-    androidTestImplementation "androidx.test:runner:1.5.2"
-
+    implementation(libs.bundles.room)
+    kapt(libs.room.compiler)
+    testImplementation(libs.room.testing)
 
     // Dagger Hilt
-    implementation libs.dagger.core
-    kapt libs.dagger.compiler
+    implementation(libs.dagger.core)
+    kapt(libs.dagger.compiler)
 
     //Timber
     implementation(libs.timber)
