--- a/data/genre/build.gradle
+++ b/data/genre/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation project(":core:model:common")
     implementation project(":core:response")
     implementation project(":core:network")
+    implementation project(":core:database")
 
     implementation libs.bundles.androidX
     testImplementation libs.junitTest
