--- a/data/genre/build.gradle
+++ b/data/genre/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     // Kotlin Coroutines
     implementation(libs.bundles.coroutines)
 
+    //Timber
+    implementation(libs.timber)
+
 }
