feat: update movie details genres
+ Now user can see wich movie has fav genres

--- a/feature/movie_details/build.gradle
+++ b/feature/movie_details/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation project(':core:network')
     implementation project(':core:navigation')
     implementation project(':data:movie')
+    implementation project(':data:genre')
 
     implementation(libs.appcompat)
     implementation(libs.material)
