--- a/data/movie/build.gradle
+++ b/data/movie/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     api project(":core:model:person")
     implementation project(":core:response")
     implementation project(":core:network")
+    implementation project(":core:database")
+
 
     implementation libs.bundles.androidX
     testImplementation libs.junitTest
