--- a/feature/person_details/build.gradle
+++ b/feature/person_details/build.gradle
@@ -50,7 +50,10 @@ dependencies {
     implementation(libs.constraintLayout)
     implementation(libs.legacy)
     implementation(libs.fragmentKtx)
+    testImplementation project(':core:testing')
     testImplementation(libs.junitTest)
+    testImplementation(libs.coroutines.test)
+    testImplementation(libs.google.truth)
     androidTestImplementation(libs.junitAndroidTest)
     androidTestImplementation(libs.espresso)
 
