--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,22 @@
+
 pluginManagement {
     repositories {
         gradlePluginPortal()
         google()
         mavenCentral()
+    }
+}
+plugins {
+    id("com.gradle.enterprise") version("3.14.1")
+}
+
+gradleEnterprise {
+    if (System.getenv("CI") != null) {
+        buildScan {
+            publishAlways()
+            termsOfServiceUrl = "https://gradle.com/terms-of-service"
+            termsOfServiceAgree = "yes"
+        }
     }
 }
 dependencyResolutionManagement {
