--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,10 @@ dependencies {
     implementation(libs.material)
     implementation(libs.constraintLayout)
     implementation(libs.legacy)
-    implementation(libs.fragmentKtx)
+    implementation(libs.androidx.fragment)
     testImplementation(libs.junitTest)
-    androidTestImplementation(libs.junitAndroidTest)
-    androidTestImplementation(libs.espresso)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso)
 
     // Kotlin Extensions
     implementation(libs.core.ktx)
@@ -74,8 +74,8 @@ dependencies {
     implementation(libs.bundles.navigation)
 
     // Dagger Hilt
-    implementation(libs.dagger.core)
-    kapt(libs.dagger.compiler)
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.compiler)
 
     // Retrofit
     implementation(libs.bundles.retrofit)
