--- a/core/navigation/build.gradle
+++ b/core/navigation/build.gradle
@@ -39,10 +39,10 @@ dependencies {
     implementation(libs.material)
     implementation(libs.constraintLayout)
     implementation(libs.legacy)
-    implementation(libs.fragmentKtx)
+    implementation(libs.androidx.fragment)
     testImplementation(libs.junitTest)
-    androidTestImplementation(libs.junitAndroidTest)
-    androidTestImplementation(libs.espresso)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso)
 
     // Jetpack Navigation - Kotlin
     implementation(libs.bundles.navigation)
