--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -3,20 +3,22 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
+
 def apikeyPropertiesFile = rootProject.file("local.properties")
 def apikeyProperties = new Properties()
 apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))
 
+
 android {
-    namespace 'com.indisparte.network'
-    compileSdk libs.versions.targetSdk.get().toInteger()
+    namespace  "com.indisparte.network"
+    compileSdk  libs.versions.targetSdk.get().toInteger()
 
     defaultConfig {
-        minSdk libs.versions.minSdk.get().toInteger()
-        targetSdk libs.versions.targetSdk.get().toInteger()
+        minSdk  libs.versions.minSdk.get().toInteger()
+        targetSdk   libs.versions.targetSdk.get().toInteger()
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        testInstrumentationRunner  "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles  "consumer-rules.pro"
 
         buildConfigField("String", "TMDB_API_KEY", apikeyProperties['TMDB_API_KEY'] )
 
@@ -24,13 +26,13 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled  false
+            proguardFiles   getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility  JavaVersion.VERSION_1_8
+        targetCompatibility  JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -40,18 +42,18 @@ android {
 
 dependencies {
 
-    implementation libs.bundles.androidX
-    testImplementation libs.junitTest
+    implementation(libs.bundles.androidX)
+    testImplementation(libs.junitTest)
 
 
     //Retrofit
-    implementation libs.bundles.retrofit
+    implementation(libs.bundles.retrofit)
 
     // Dagger Hilt
-    implementation libs.dagger.core
-    kapt libs.dagger.compiler
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.compiler)
 
     //Timber
     implementation(libs.timber)
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.22"
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.8.22")
 }
