--- a/data/search/build.gradle
+++ b/data/search/build.gradle
@@ -37,15 +37,15 @@ dependencies {
     implementation project(":core:response")
     implementation project(":core:network")
 
-    implementation libs.bundles.androidX
-    testImplementation libs.junitTest
+    implementation(libs.bundles.androidX)
+    testImplementation(libs.junitTest)
 
     //Retrofit
-    implementation libs.bundles.retrofit
+    implementation(libs.bundles.retrofit)
 
     // Dagger Hilt
-    implementation(libs.dagger.core)
-    kapt(libs.dagger.compiler)
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.compiler)
 
     // Kotlin Coroutines
     implementation(libs.bundles.coroutines)
