--- a/feature/media_search/build.gradle
+++ b/feature/media_search/build.gradle
@@ -49,13 +49,13 @@ dependencies {
     implementation(libs.material)
     implementation(libs.constraintLayout)
     implementation(libs.legacy)
-    implementation(libs.fragmentKtx)
+    implementation(libs.androidx.fragment)
     testImplementation(libs.junitTest)
     testImplementation project(':core:testing')
     testImplementation(libs.coroutines.test)
-    testImplementation(libs.google.truth)
-    androidTestImplementation(libs.junitAndroidTest)
-    androidTestImplementation(libs.espresso)
+    testImplementation(libs.truth)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso)
 
     // Kotlin Extensions
     implementation(libs.core.ktx)
@@ -67,8 +67,8 @@ dependencies {
     implementation(libs.bundles.navigation)
 
     // Dagger Hilt
-    implementation(libs.dagger.core)
-    kapt(libs.dagger.compiler)
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.compiler)
 
     //Timber
     implementation(libs.timber)
