--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,70 +1,90 @@
 [versions]
 appcompat = "1.5.0"
-material = "1.6.1"
+material = "1.9.0"
 constraintLayout = "2.1.4"
-fragmentKtx = "1.5.5"
-junitTest = "4.13.2"
-junitAndroidTest = "1.1.3"
-espresso = "3.4.0"
+androidxFragment = "1.6.1"
+junit = "4.13.2"
+androidxTestJunit = "1.1.5"
+espresso = "3.5.1"
 legacy = "1.0.0"
 core = "1.9.0"
 coroutines = "1.7.2"
-okhttp = "5.0.0-alpha.11"
+okHttp = "4.11.0"
 retrofit = "2.9.0"
 navigation = "2.5.1"
 glide = "4.15.1"
-dagger = "2.46.1"
+hilt = "2.47"
 jetbrainsPlugin = "1.7.20"
-androidGradlePlugin = "7.3.1"
+agp = "8.0.1"
 minSdk = "22"
 targetSdk = "34"
-room = "2.5.2"
-timber = "1.5.1"
+androidxRoom = "2.5.2"
+timber = "5.0.1"
 truth = "1.1.4"
 testRunner = "1.5.2"
+kotlin = "1.9.0"
+androidxArchCore = "2.2.0"
+
 
 [libraries]
+agp = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
-constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
-legacy = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacy" }
-fragmentKtx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentKtx" }
-junitTest = { module = "junit:junit", version.ref = "junitTest" }
-junitAndroidTest = { module = "androidx.test.ext:junit", version.ref = "junitAndroidTest" }
-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }# necessario?
+legacy = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacy" }#necessario?
+
+androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "androidxFragment" }
+androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestJunit" }
+androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
+
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
-google-truth = { module = "com.google.truth:truth", version.ref = "truth" }
+
 retrofit2-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit2-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
+okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
+
 navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
 navigation-features = { module = "androidx.navigation:navigation-dynamic-features-fragment", version.ref = "navigation" }
+
 glide-core = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
-dagger-core = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
-dagger-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
-room-testing = { module = "androidx.room:room-testing", version.ref = "room" }
-timber = { module = "com.github.ajalt:timberkt", version.ref = "timber" }
+
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+hilt-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
+
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidxRoom" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxRoom" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidxRoom" }
+room-testing = { module = "androidx.room:room-testing", version.ref = "androidxRoom" }
+
+timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+
+#unit test
+junitTest = { module = "junit:junit", version.ref = "junit" }
 test-runner = { module = "androidx.test:runner", version.ref = "testRunner" }
+androidx-arch-core = { module = "androidx.arch.core:core-testing", version.ref = "androidxArchCore" }
+truth = { module = "com.google.truth:truth", version.ref = "truth" }
 
 [bundles]
 coroutines = ["coroutines.core", "coroutines.android"]
-retrofit = ["retrofit2.core", "retrofit2.converter", "logging.interceptor", "okhttp.core"]
+retrofit = ["retrofit2.core", "retrofit2.converter", "okhttp.interceptor", "okhttp.core"]
 navigation = ["navigation.fragment", "navigation.ui", "navigation-features"]
 androidX = ["core.ktx", "appcompat", "constraintLayout"]
-room = ["room-runtime", "room-ktx"]
-androidTest = ["junitAndroidTest", "test-runner" ]
+room = ["androidx-room-runtime", "androidx-room-ktx"]
+androidTest = ["androidx-junit", "test-runner"]
 
 [plugins]
-android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
-jetbrains-kotlin = { id = "org.jetbrains.kotlin.android", version = "1.9.10" }
-dagger-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+hilt-plugin = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigation" }
