add buildSrc for configurations
- Migration to kotlin dsl

--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     //Retrofit
     implementation(libs.bundles.retrofit)
+    testImplementation(libs.androidx.arch.core)
+
 
     // Dagger Hilt
     implementation(libs.hilt.android)
