--- a/data/search/build.gradle
+++ b/data/search/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     api project(":core:model:movie")
+    api project(":core:model:tv")
     implementation project(":core:response")
     implementation project(":core:network")
 
