--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     implementation project(":core:model:common")
+    implementation project(":core:model:base")
 
     implementation(libs.bundles.androidX)
     implementation(libs.bundles.coroutines)
