--- a/data/genre/build.gradle
+++ b/data/genre/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
 
     implementation project(":core:model:common")
+    implementation project(":core:model:base")
     implementation project(":core:response")
     implementation project(":core:network")
     implementation project(":core:database")
