--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -2,7 +2,7 @@ name: 🚀 Feature request
 description: Suggest an feature / idea for this project
 title: "[Feature Request / Suggestion]: "
 labels: ["enhancement"]
-projects: ["CineMates"]
+projects: ["iamantoniodinuzzo/projects/12"]
 body:
   - type: markdown
     attributes:
