--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,8 @@ truth = "1.1.4"
 testRunner = "1.5.2"
 kotlin = "1.9.0"
 androidxArchCore = "2.2.0"
+androidTestJunit = "1.1.5"
+
 
 
 [libraries]
@@ -36,13 +38,11 @@ constraintLayout = { module = "androidx.constraintlayout:constraintlayout", vers
 legacy = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacy" }#necessario?
 
 androidx-fragment = { module = "androidx.fragment:fragment-ktx", version.ref = "androidxFragment" }
-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestJunit" }
 androidx-espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
 
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 retrofit2-core = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit2-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
@@ -63,16 +63,18 @@ hilt-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidxRoom" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxRoom" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidxRoom" }
-room-testing = { module = "androidx.room:room-testing", version.ref = "androidxRoom" }
 
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 
 #unit test
+coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+room-testing = { module = "androidx.room:room-testing", version.ref = "androidxRoom" }
 junitTest = { module = "junit:junit", version.ref = "junit" }
 test-runner = { module = "androidx.test:runner", version.ref = "testRunner" }
 androidx-arch-core = { module = "androidx.arch.core:core-testing", version.ref = "androidxArchCore" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
-androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version = "1.1.5" }
+junitAndroid = { module = "androidx.test.ext:junit", version.ref = "androidTestJunit" }
+
 
 [bundles]
 coroutines = ["coroutines.core", "coroutines.android"]
@@ -80,7 +82,7 @@ retrofit = ["retrofit2.core", "retrofit2.converter", "okhttp.interceptor", "okht
 navigation = ["navigation.fragment", "navigation.ui", "navigation-features"]
 androidX = ["core.ktx", "appcompat", "constraintLayout"]
 room = ["androidx-room-runtime", "androidx-room-ktx"]
-androidTest = ["androidx-junit", "test-runner"]
+androidTest = ["junitAndroid", "androidx-espresso", "coroutines-test", "androidx-arch-core"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
