--- a/settings.gradle
+++ b/settings.gradle
@@ -42,3 +42,4 @@ include ':core:model:person'
 include ':core:model:tv'
 include ':core:testing'
 include ':core:database'
+include ':feature:saved'
