--- a/settings.gradle
+++ b/settings.gradle
@@ -43,3 +43,5 @@ include ':core:model:tv'
 include ':core:testing'
 include ':core:database'
 include ':feature:saved'
+include ':core:model:list'
+include ':data:list'
