--- a/settings.gradle
+++ b/settings.gradle
@@ -45,3 +45,4 @@ include ':core:database'
 include ':feature:saved'
 include ':core:model:list'
 include ':data:list'
+include ':feature:list_creation'
