--- a/settings.gradle
+++ b/settings.gradle
@@ -43,6 +43,6 @@ include ':core:model:tv'
 include ':core:testing'
 include ':core:database'
 include ':feature:saved'
-include ':core:model:list'
+include ':core:model:media_list'
 include ':data:list'
 include ':feature:list_creation'
